node.js 모듈 시스템 업로드

--- a/package.json
+++ b/package.json
@@ -16,5 +16,6 @@
   "bugs": {
     "url": "https://github.com/doggang/ReactStudy/issues"
   },
+  "type": "module",
   "homepage": "https://github.com/doggang/ReactStudy#readme"
 }
