--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start" : "node src/index.js"
+    "start": "node src/index.js"
   },
   "repository": {
     "type": "git",
@@ -17,5 +17,8 @@
     "url": "https://github.com/doggang/ReactStudy/issues"
   },
   "type": "module",
-  "homepage": "https://github.com/doggang/ReactStudy#readme"
+  "homepage": "https://github.com/doggang/ReactStudy#readme",
+  "dependencies": {
+    "randomcolor": "^0.6.2"
+  }
 }
