--- a/section08/package.json
+++ b/section08/package.json
@@ -7,7 +7,9 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+        "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
     "react": "^19.0.0",
@@ -25,5 +27,7 @@
     "gh-pages": "^6.3.0",
     "globals": "^15.14.0",
     "vite": "^6.1.0"
-  }
+  },
+  "homepage": "https://doggang.github.io/ReactStudy/",
+
 }
